--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <p><p><b>却会对你伸出援手<br></p><br><br><br>
       <div class="sign">
         <p>@流浪ㅤㅤㅤ</p>
-        <p><?php echo date("Y-m-d");?></p>
+        <p>getNowFormatDate()</p>
       </div> 
 <script>
   var $el = document.querySelector('#pic');
@@ -163,6 +163,21 @@
       }
     }, 1000 / 3);
   }
+  function getNowFormatDate() {
+        var date = new Date();
+        var seperator1 = "-";
+        var year = date.getFullYear();
+        var month = date.getMonth() + 1;
+        var strDate = date.getDate();
+        if (month >= 1 && month <= 9) {
+            month = "0" + month;
+        }
+        if (strDate >= 0 && strDate <= 9) {
+            strDate = "0" + strDate;
+        }
+        var currentdate = year + seperator1 + month + seperator1 + strDate;
+        return currentdate;
+    }
 </script>
 <!--音乐代码-->
 <audio autoplay="autoplay" src="https://api.vvhan.com/api/rand.music?sort=热歌榜" onended="this.load();"></audio>
