--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <p><p><b>却会对你伸出援手<br></p><br><br><br>
       <div class="sign">
         <p>@流浪ㅤㅤㅤ</p>
-        <p>getNowFormatDate()</p>
+        <p>getNowFormatDate();</p>
       </div> 
 <script>
   var $el = document.querySelector('#pic');
